fix currency align

--- a/src/app/modules/main/components/lista-pagamenti/lista-pagamenti.component.scss
+++ b/src/app/modules/main/components/lista-pagamenti/lista-pagamenti.component.scss
@@ -1,3 +1,7 @@
+:host ::ng-deep .currency {
+  text-align: right;
+}
+
 :host ::ng-deep ngb-pagination {
   .pagination {
     transform: scale(0.8);
